# blueberry

./: .env.example  .gitignore  README.md  docker-compose.yml  electron-builder.yml  electron.vite.config.ts  package.json  tailwind.config.js
grounder_provider/: __init__.py  download_model.py  pyproject.toml  server.py
src/main/: LLMClient.ts  Menu.ts  PageState.ts  SessionLog.ts  Tab.ts  TaskGraphCompiler.ts  Window.ts  WorkflowCompiler.ts  eventTail.ts  events.ts  index.ts  kafka.ts  logger.ts  tracer.ts
src/main/graph/: BehaviorGraph.ts  BehaviorGraphBuilder.ts  GraphStore.ts
src/main/grounding/: Grounder.ts  ServerGrounder.ts  WebGpuGrounder.ts  index.ts
src/main/ipc/: EventContext.ts  EventRegistry.ts  registerDebugEvents.ts  registerPageContentEvents.ts  registerSidebarEvents.ts  registerTabEvents.ts  registerThemeEvents.ts  registerWindowEvents.ts  registerWorkflowEvents.ts  utils.ts
src/main/llm/: browserTools.ts  compaction.ts  groundTools.ts  harness.ts  index.ts  interactTools.ts  nightHarness.ts  observeTools.ts  prompt.ts  sense.ts  todoTools.ts  tool.ts
src/main/llm/clients/: faraOllama.ts  faraVllm.ts  index.ts  simple.ts  streaming.ts  types.ts
src/main/llm/fara/: backend.ts  index.ts  ollamaAgent.ts  parser.ts  prompt.ts  tool.ts
src/main/scripts/: page-state.js
src/preload/: sidebar.d.ts  sidebar.ts  tab.ts  topbar.ts
src/renderer/common/lib/: logger.ts
src/renderer/sidebar/src/: SidebarApp.tsx  main.tsx
src/renderer/sidebar/src/components/: Chat.tsx  Workflows.tsx
src/renderer/sidebar/src/contexts/: ChatContext.tsx
(+3 files in other folders)
